<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SettingsFragment">


    <TableLayout
        android:id="@+id/settingParametersTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="50dp"
        >
        <TableRow>

            <TextView
                android:id="@+id/settingTextViewFramesPerDataCallback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/spinnerFramesPerDataCallback"
                android:text="@string/framesPerDataCallbackDescription" />

            <Spinner
                android:id="@+id/spinnerFramesPerDataCallback"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:entries="@array/framesPerDataCallbackValues"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingTextViewBufferCapacityInFrames"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/spinnerBufferCapacityInFrames"
                android:text="@string/bufferCapacityInFramesDescription" />

            <Spinner
                android:id="@+id/spinnerBufferCapacityInFrames"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:entries="@array/bufferCapacityInFramesValues"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingTextViewVerboseTouchElements"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/spinnerBufferCapacityInFrames"
                android:text="@string/touchElementDiplay"
                />

            <Spinner
                android:id="@+id/spinnerTouchElementsDisplay"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:entries="@array/touchElementDisplayStyle"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingReactOnSlideIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/switchReactOnSlideIn"
                android:text="@string/settingsReactOnSlideIn"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchReactOnSlideIn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_gravity="start"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingAllowMultiGestures"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/spinnerBufferCapacityInFrames"
                android:text="@string/settingsUseMultiTouchGestures"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchAllowMultiGestures"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_gravity="start"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingToggleTouchelements"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/spinnerBufferCapacityInFrames"
                android:text="@string/settingToggleTouchElements"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchToggleTouchElements"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_gravity="start"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingsTextViewConnectors"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:labelFor="@id/toggleButtonShowConnectors"
                android:text="@string/settings_connector_display"
                />
            <ToggleButton
                android:id="@+id/toggleButtonShowConnectors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingTextViewMidiMode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:text="@string/midiMode"
                />

            <LinearLayout android:orientation="vertical">
                <CheckBox
                    android:id="@+id/settingCheckboxMidiDeviceMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/midiDeviceMode" />

                <CheckBox
                    android:id="@+id/settingCheckboxMidiHostMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/midiHostMode" />
            </LinearLayout>

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingTextViewMidiInDevices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:text="@string/availableMidiInDevices"
                />
            <ListView
                android:id="@+id/settingListViewMidiInDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingTextViewMidiOutDevices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:text="@string/availableMidiOutDevices"
                />
            <ListView
                android:id="@+id/settingListViewMidiOutDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingsRtpMidi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:text="@string/rtpmidi"
                />
            <ToggleButton
                android:id="@+id/toggleButtonRtpMidi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enable"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/settingsRtpMidiNoteRepeat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minLines="2"
                android:text="@string/rtpMidiNoteRepeat"
                />

            <Spinner
                android:id="@+id/spinnerRtpMidiNoteRepeat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:entries="@array/rtpMidiNoteRepeatValues"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp">

            </Spinner>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/ipAdress"
                />
            <TextView
                android:id="@+id/ipAddress"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/rtpMidiPorts"
                />
            <TextView
                android:id="@+id/rtpMidiPorts"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/settingTextViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/unknownName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingParametersTable"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>