...
        android:layout_width="202dp"
        android:layout_height="match_parent"

        />

    <ImageButton
        android:id="@+id/toolbar_playpage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
...
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/menuitem_soundgenerator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <ImageButton
        android:id="@+id/toolbar_scenespage"
        app:layout_constraintEnd_toStartOf="@id/toolbar_settingspage"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/scene"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
...
