...
        <item>Never</item>
    </string-array>
    <string-array name="framesPerDataCallbackValues">
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="bufferCapacityInFramesValues">
        <item>64</item>
        <item>128</item>
        <item>256</item>
...
