<?xml version="1.0" encoding="utf-8"?>
<ch.sr35.touchsamplesynth.views.PlayArea xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/playpage_layout"
    tools:context=".fragments.PlayPageFragment">

    <LinearLayout
        android:id="@+id/playpage_instrument_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

</ch.sr35.touchsamplesynth.views.PlayArea>
